--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@ h1, h2, p {
 
 body {
   background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+  font-family: sans-serif;
 }
 
 .menu {
