--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,10 @@ h1, h2, p {
   text-align: center;
 }
 
+h1, h2 {
+  font-family: Impact;
+}
+
 body {
   background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
   font-family: sans-serif;
