--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,10 @@ h1, h2 {
   font-family: Impact, serif;
 }
 
+.established {
+  font-style: italic;
+}
+
 body {
   background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
   font-family: sans-serif;
