--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,14 @@ h1, h2 {
   font-family: Impact, serif;
 }
 
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
 .established {
   font-style: italic;
 }
