--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,7 @@ h2 {
 body {
   background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
   font-family: sans-serif;
+  padding: 20px;
 }
 
 .menu {
