--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,10 @@ hr {
   border-color: brown;
 }
 
+.bottom-line {
+  margin-top: 25px;
+}
+
 .item p {
   display: inline-block;
   margin-top: 5px;
