--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,12 @@ body {
   max-width: 500px;
 }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 hr {
   height: 2px;
   background-color: brown;
